# SLAM-Dataset-Format

./: CMakeLists.txt  Readme.md  Readme.txt
modules/: CMakeLists.txt
modules/EuRoC/: CMakeLists.txt
modules/EuRoC/src/: EuRoCToSDF.cc
modules/SDF/: CMakeLists.txt
modules/SDF/include/: SDF.h  SDFSensor.h  SDFSensorType.h
modules/SDF/include/camera_models/: CameraModel.h  Pinhole.h
modules/SDF/include/distortion_models/: DistortionModel.h  RadialTangential.h
modules/SDF/include/sensors/: CameraSensor.h  ImuSensor.h
modules/SDF/include/sensors/params/: CameraSensorParams.h
modules/SDF/src/: SDF.cpp  SDFSensor.cpp
modules/SDF/src/sensors/: CameraSensor.cpp  ImuSensor.cpp
modules/SDF/test/: testSDF.cpp
